# fuzzy-palm-tree

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conf.py  index.md  noxfile.py  pyproject.toml  refraction.py
docs/: conf.py  index.md
src/example/: hello.py  refraction.py
src/fuzzy_palm_tree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_snell.py
