[project]
name = "fuzzy-palm-tree"
version = "2024.12.0a"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
]

[project.optional-dependencies]
test = [
    "pytest",
]

docs = [
    "sphinx",
    "myst-parser",
]

mpl = [
    "matplotlib",
]